--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -97,9 +97,6 @@ $arrow-right-sm: url('../img/arrow-right-sm.svg');
 }
 
 /// amp carousel arrows - services carousel ///
-// #services-carousel .amp-carousel-button {
-// 	top: 71%;
-// }
 
 #services-carousel .amp-carousel-button-next {
 	right: 30px;
@@ -109,6 +106,11 @@ $arrow-right-sm: url('../img/arrow-right-sm.svg');
 #services-carousel .amp-carousel-button-prev {
 	left: 30px;
 	@include arrow-left;
+}
+
+/// amp carousel arrows - menu carousel ///
+#menu-carousel .amp-carousel-button {
+	display: none;
 }
 
 /// amp carousel arrows - reviews carousel ///
@@ -511,11 +513,6 @@ h6 {
 	}
 
 	&.logo_desktop {
-		.logo__link {
-			.logo__pic {
-				width: 156.07%;
-			}
-		}
 		.logo__title {
 			font-size: 13px;
 			letter-spacing: 1.3px;
@@ -611,10 +608,6 @@ h6 {
 	}
 }
 
-// .services-carousel {
-
-// }
-
 .services-cards {
 	display: flex;
 	justify-content: space-around;
@@ -666,6 +659,208 @@ h6 {
 			font-size: 15px;
 			letter-spacing: 1.5px;
 			text-align: center;
+		}
+	}
+}
+
+.menu {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+
+	.menu__pic {
+		display: flex;
+	}
+
+	&.menu_mobile {
+		background-color: #e0d6d0;
+		position: relative;
+		height: 480px;
+		display: flex;
+		justify-content: center;
+
+		.menu__content {
+			padding: 71px 130px 0px 27px;
+			z-index: 1;
+
+			.menu__titles {
+				margin-bottom: 55px;
+				.menu__title {
+					font-size: 22px;
+					letter-spacing: 2.2px;
+					width: 174px;
+				}
+
+				.menu__subtitle {
+					font-size: 18px;
+					letter-spacing: 1.8px;
+				}
+			}
+
+			.menu__selector {
+				width: 167px;
+				display: flex;
+				justify-content: center;
+			}
+		}
+
+		.menu__pic {
+			position: absolute;
+			right: -102px;
+
+			img {
+				height: 480px;
+				width: 218px;
+			}
+		}
+	}
+
+	&.menu_desktop {
+		display: none;
+		background-color: #e9e2e0;
+
+		.menu__content {
+			padding: 53px 30px 53px 180px;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+
+			.menu__titles {
+				margin-bottom: 80px;
+				.menu__title {
+					font-size: 48px;
+					letter-spacing: 4.8px;
+				}
+
+				.menu__subtitle {
+					font-size: 30px;
+					letter-spacing: 3px;
+				}
+			}
+
+			.menu__list {
+				height: 100%;
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+			}
+		}
+	}
+}
+
+.price-list-item {
+	.price-list-item__info {
+		.price-list-item__description {
+			color: rgba(0, 0, 0, 0.8);
+		}
+	}
+
+	&.price-list-item_mobile {
+		.price-list-item__info {
+			margin-bottom: 10px;
+			.price-list-item__name {
+				font-size: 14px;
+				letter-spacing: 0.91px;
+				margin-bottom: 10px;
+			}
+
+			.price-list-item__description {
+				font-size: 12px;
+				letter-spacing: 1.2px;
+			}
+		}
+
+		.price-list-item__price {
+			font-size: 16px;
+			letter-spacing: 1.04px;
+			text-align: center;
+		}
+	}
+
+	&.price-list-item_desktop {
+		display: flex;
+
+		.price-list-item__info {
+			width: 85%;
+			padding-right: 20px;
+			.price-list-item__name {
+				font-size: 23px;
+				letter-spacing: 1.495px;
+				margin-bottom: 18px;
+			}
+
+			.price-list-item__description {
+				font-size: 18px;
+				letter-spacing: 1.8px;
+			}
+		}
+
+		.price-list-item__price {
+			width: 15%;
+			font-size: 23px;
+			letter-spacing: 1.495px;
+		}
+	}
+}
+
+.dots-selector {
+	display: flex;
+	align-items: center;
+
+	.dots-selector__dots-container {
+		display: flex;
+
+		.dots-selector__dot-button {
+			width: 5px;
+			height: 5px;
+			border-radius: 10px;
+			display: inline-block;
+			background-color: rgba(106, 117, 113, 0.2);
+
+			&:nth-child(2) {
+				margin: 0px 5px;
+			}
+
+			&[option][selected] {
+				outline: none;
+				background-color: #6a7571;
+			}
+
+			// &.dots-selector__dot-button_first {
+			// 	&[selected] {
+			// 		background-color: #6a7571;
+
+			// 		& ~ .dots-selector__dot-button {
+			// 			background-color: red;
+			// 		}
+
+			// 		& + .dots-selector__dot-button {
+			// 			background-color: blue;
+			// 		}
+			// 	}
+
+			// 	&:not([selected]) {
+			// 		background-color: blue;
+			// 	}
+			// }
+
+			// &.dots-selector__dot-button_second {
+			// 	&[selected] {
+			// 		background-color: #6a7571;
+
+			// 		& + .dots-selector__dot-button {
+			// 			background-color: blue;
+			// 		}
+			// 	}
+
+			// 	&:not([selected]) {
+			// 		background-color: red;
+			// 	}
+			// }
+
+			// &.dots-selector__dot-button_third {
+			// 	background-color: #6a7571;
+			// }
 		}
 	}
 }
@@ -747,68 +942,6 @@ h6 {
 			font-family: $open-sans;
 			font-size: 22px;
 			letter-spacing: 2.2px;
-		}
-	}
-}
-
-.reviews-selector {
-	display: flex;
-	align-items: center;
-
-	.reviews-selector__dots-container {
-		display: flex;
-
-		.reviews-selector__dot-button {
-			width: 5px;
-			height: 5px;
-			border-radius: 10px;
-			display: inline-block;
-			background-color: rgba(106, 117, 113, 0.2);
-
-			&:nth-child(2) {
-				margin: 0px 5px;
-			}
-
-			&[option][selected] {
-				outline: none;
-				background-color: #6a7571;
-			}
-
-			// &.reviews-selector__dot-button_first {
-			// 	&[selected] {
-			// 		background-color: #6a7571;
-
-			// 		& ~ .reviews-selector__dot-button {
-			// 			background-color: red;
-			// 		}
-
-			// 		& + .reviews-selector__dot-button {
-			// 			background-color: blue;
-			// 		}
-			// 	}
-
-			// 	&:not([selected]) {
-			// 		background-color: blue;
-			// 	}
-			// }
-
-			// &.reviews-selector__dot-button_second {
-			// 	&[selected] {
-			// 		background-color: #6a7571;
-
-			// 		& + .reviews-selector__dot-button {
-			// 			background-color: blue;
-			// 		}
-			// 	}
-
-			// 	&:not([selected]) {
-			// 		background-color: red;
-			// 	}
-			// }
-
-			// &.reviews-selector__dot-button_third {
-			// 	background-color: #6a7571;
-			// }
 		}
 	}
 }
@@ -1270,6 +1403,14 @@ h6 {
 		}
 
 		.services-and-video_desktop {
+			display: flex;
+		}
+
+		.menu_mobile {
+			display: none;
+		}
+
+		.menu_desktop {
 			display: flex;
 		}
 
