--- a/styles/styles.css
+++ b/styles/styles.css
@@ -378,6 +378,7 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 .header.header_mobile .header-mobile__hamgurger {
   display: flex;
@@ -385,7 +386,7 @@ h6 {
 .header.header_desktop .header__nav-menu {
   width: 640px;
   position: absolute;
-  left: 25%;
+  left: 23%;
 }
 
 .action-block {
