--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1107,32 +1107,6 @@ h6 {
   margin-top: 38px;
 }
 
-.footer {
-  width: 100%;
-}
-.footer .footer__rights {
-  font-size: 13px;
-  letter-spacing: 1.3px;
-}
-.footer.footer_mobile .footer__media {
-  background-color: rgba(196, 196, 196, 0.65);
-}
-.footer.footer_mobile .footer__rights {
-  padding: 16px 0px;
-  text-align: center;
-  background-color: transparent;
-}
-.footer.footer_desktop {
-  display: none;
-  align-items: center;
-  justify-content: space-between;
-  background: rgba(228, 227, 227, 0.72);
-  padding: 26px 80px 26px 40px;
-}
-.footer.footer_desktop .footer__nav-menu {
-  width: 42%;
-}
-
 .media {
   display: flex;
   align-items: center;
@@ -1140,6 +1114,8 @@ h6 {
 }
 .media .media__item {
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .media .media__item svg path {
   fill: #231f20;
@@ -1150,13 +1126,67 @@ h6 {
 .media .media__item:active svg path {
   fill: #1b2622;
 }
-.media .media__item.media__item_margin_lg {
+
+.footer {
+  width: 100%;
+}
+.footer .footer__media {
+  background-color: rgba(196, 196, 196, 0.65);
+}
+.footer .footer__media .footer__media-item {
   margin: 16px 5px;
 }
-.media .media__item.media__item_margin_sm {
-  margin: 0px 3.5px;
+.footer .footer__nav-menu {
+  display: none;
+}
+.footer .footer__rights {
+  padding: 16px 0px;
+  text-align: center;
+  font-size: 13px;
+  letter-spacing: 1.3px;
 }
 
+@media (min-width: 1280px) {
+  .footer {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+    background: rgba(228, 227, 227, 0.72);
+    padding: 26px 80px 26px 40px;
+  }
+  .footer .footer__media {
+    background: none;
+  }
+  .footer .footer__media .footer__media-item {
+    margin: 0px 3.5px;
+  }
+  .footer .footer__media .footer__media-item:nth-child(1) {
+    width: 17px;
+    height: 17px;
+  }
+  .footer .footer__media .footer__media-item:nth-child(2) {
+    width: 21px;
+    height: 19px;
+  }
+  .footer .footer__media .footer__media-item:nth-child(3) {
+    width: 18px;
+    height: 19px;
+  }
+  .footer .footer__media .footer__media-item:nth-child(4) {
+    width: 20px;
+    height: 17px;
+  }
+  .footer .footer__nav-menu {
+    display: flex;
+    width: 42%;
+  }
+  .footer .footer__rights {
+    padding: 0px;
+    text-align: center;
+    background-color: transparent;
+  }
+}
 @media (min-width: 1280px) {
   .wrapper .landing_mobile {
     display: none;
@@ -1198,12 +1228,6 @@ h6 {
     display: none;
   }
   .wrapper .message_desktop {
-    display: flex;
-  }
-  .wrapper .footer_mobile {
-    display: none;
-  }
-  .wrapper .footer_desktop {
     display: flex;
   }
 }/*# sourceMappingURL=styles.css.map */
