--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,13 +4,6 @@
 $prata: 'Prata', serif;
 $open-sans: 'Open Sans', sans-serif;
 
-$black: rgba(0, 0, 0, 0.84);
-$dark-gray: #6a7571;
-$gray: rgba(143, 153, 147, 0.63);
-$light-gray: rgba(142, 153, 147, 0.4);
-$beige: #e9e2e0;
-$white: white;
-
 $arrow-left: url('../img/arrow-left.svg');
 $arrow-right: url('../img/arrow-right.svg');
 $arrow-left-sm: url('../img/arrow-left-sm.svg');
@@ -502,7 +495,7 @@ h6 {
 	.logo__title {
 		font-size: 11px;
 		line-height: 15px;
-		color: $black;
+		color: rgba(0, 0, 0, 0.84);
 	}
 
 	&.logo_mobile {
@@ -1311,39 +1304,6 @@ h6 {
 	}
 }
 
-.footer {
-	width: 100%;
-
-	.footer__rights {
-		font-size: 13px;
-		letter-spacing: 1.3px;
-	}
-
-	&.footer_mobile {
-		.footer__media {
-			background-color: rgba(196, 196, 196, 0.65);
-		}
-
-		.footer__rights {
-			padding: 16px 0px;
-			text-align: center;
-			background-color: transparent;
-		}
-	}
-
-	&.footer_desktop {
-		display: none;
-		align-items: center;
-		justify-content: space-between;
-		background: rgba(228, 227, 227, 0.72);
-		padding: 26px 80px 26px 40px;
-
-		.footer__nav-menu {
-			width: 42%;
-		}
-	}
-}
-
 .media {
 	display: flex;
 	align-items: center;
@@ -1351,6 +1311,8 @@ h6 {
 
 	.media__item {
 		display: flex;
+		align-items: center;
+		justify-content: center;
 
 		svg {
 			path {
@@ -1373,18 +1335,82 @@ h6 {
 				}
 			}
 		}
+	}
+}
 
-		&.media__item_margin_lg {
+.footer {
+	width: 100%;
+
+	.footer__media {
+		background-color: rgba(196, 196, 196, 0.65);
+		.footer__media-item {
 			margin: 16px 5px;
 		}
+	}
 
-		&.media__item_margin_sm {
-			margin: 0px 3.5px;
-		}
+	.footer__nav-menu {
+		display: none;
+	}
+
+	.footer__rights {
+		padding: 16px 0px;
+		text-align: center;
+		font-size: 13px;
+		letter-spacing: 1.3px;
 	}
 }
 
 /// resolution styles ///
+
+@media (min-width: 1280px) {
+	.footer {
+		display: flex;
+		flex-direction: row-reverse;
+		align-items: center;
+		justify-content: space-between;
+		background: rgba(228, 227, 227, 0.72);
+		padding: 26px 80px 26px 40px;
+
+		.footer__media {
+			background: none;
+
+			.footer__media-item {
+				margin: 0px 3.5px;
+
+				&:nth-child(1) {
+					width: 17px;
+					height: 17px;
+				}
+
+				&:nth-child(2) {
+					width: 21px;
+					height: 19px;
+				}
+
+				&:nth-child(3) {
+					width: 18px;
+					height: 19px;
+				}
+
+				&:nth-child(4) {
+					width: 20px;
+					height: 17px;
+				}
+			}
+		}
+
+		.footer__nav-menu {
+			display: flex;
+			width: 42%;
+		}
+
+		.footer__rights {
+			padding: 0px;
+			text-align: center;
+			background-color: transparent;
+		}
+	}
+}
 
 @media (min-width: 1280px) {
 	.wrapper {
@@ -1441,14 +1467,6 @@ h6 {
 		}
 
 		.message_desktop {
-			display: flex;
-		}
-
-		.footer_mobile {
-			display: none;
-		}
-
-		.footer_desktop {
 			display: flex;
 		}
 	}
